--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "jyl44760@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
     "typescript": "^5.2.2"
   }
